@@ -7,13 +7,37 @@
  */
 package io.camunda.webapps.schema.descriptors.backup;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public record SnapshotIndexCollection(List<String> indices) {
-  public SnapshotIndexCollection addIndices(final Collection<String> newIndices) {
+public record SnapshotIndexCollection(List<String> requiredIndices, List<String> skippableIndices) {
+
+  public static <A extends BackupPriority> SnapshotIndexCollection of(
+      final Collection<A> backupPriorities) {
+    final var required = new ArrayList<String>(backupPriorities.size());
+    final var skippable = new ArrayList<String>();
+    for (final var priority : backupPriorities) {
+      if (priority.required()) {
+        required.add(priority.getFullQualifiedName());
+      } else {
+        skippable.add(priority.getFullQualifiedName());
+      }
+    }
     return new SnapshotIndexCollection(
-        Stream.concat(indices.stream(), newIndices.stream()).toList());
+        Collections.unmodifiableList(required), Collections.unmodifiableList(skippable));
+  }
+
+  public SnapshotIndexCollection addSkippableIndices(final Collection<String> newIndices) {
+    return new SnapshotIndexCollection(
+        requiredIndices, Stream.concat(skippableIndices.stream(), newIndices.stream()).toList());
+  }
+
+  public List<String> allIndices() {
+    return Stream.concat(requiredIndices.stream(), skippableIndices.stream())
+        .collect(Collectors.toList());
   }
 }
